--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link class="logo" rel="icon" type="image/svg+xml" href="https://i.postimg.cc/9FSVW6B2/company-logo-transparent-png-19.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Employee Management</title>
 
      <!-- css -->
      <style>
       .font{
         font-family: "Roboto", sans-serif;
-
+        
+      }
+      .logo{
+        width: 160px;
       }
      
 
     </style>
+
+      <!-- aos -->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +29,12 @@
   </head>
   <body>
     <div id="root"></div>
+
+      <!-- Aos -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
